--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-176.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-264.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-596.4KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 167.88.61.213, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-772.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 167.88.61.175, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 167.88.61.175, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-162.0KB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-291.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-750.9KB/s(Youtube:不良林), server: 167.88.61.213, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 167.88.61.213, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-213.0KB/s(Youtube:不良林), server: 167.88.61.213, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 167.88.61.175, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 167.88.63.59, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-264.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-596.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
