--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 167.88.61.213, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-314.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 167.88.63.79, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-326.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 167.88.63.59, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 167.88.63.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-891.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-17.74MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: 167.88.61.213, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 167.88.61.213, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 167.88.61.175, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-939.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-891.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-939.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
